fix width for items

--- a/less/blog-post.less
+++ b/less/blog-post.less
@@ -22,6 +22,7 @@
     margin-left: 0;
     margin-right: 0;
     padding-bottom: 20px;
+    width: calc((100%-20px)/2);
    }
 }
 
@@ -116,7 +117,7 @@
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .like-text,
@@ -193,8 +194,6 @@ img {
 
 .blog-post__image--panorama_image {
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
   width: 100%;
 
   @media (min-width: @tablet-width) {
