border box adding to wrappers and container

--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -1,15 +1,16 @@
 .features-headers {
   padding-top: 38px;
-   margin:0 auto;
-   text-align: center;
-   padding-bottom: 86px;
+  margin:0 auto;
+  text-align: center;
+  padding-bottom: 86px;
 
    .br-separator {
     display: none;
+
     @media (min-width: @tablet-width) {
       display: inline;
     }
-   }
+  }
    @media (min-width: @tablet-width) {
     width: 95%;
     padding:0;
@@ -19,6 +20,11 @@
   }
 
   @media (min-width: @desktop-width) {
-  background: #1d2632;
+  background: @white;
+  font-size: 50px;
+  margin-top: 41px;
+  width: 737px;
+  line-height: 0;
+  }
 }
-}
+
