--- a/less/features-header.less
+++ b/less/features-header.less
@@ -23,4 +23,18 @@
     padding:0;
     line-height: 40px;
   }
+
+  @media (min-width: @desktop-width) {
+    font-size: 50px;
+    line-height: 66px;
+  }
+}
+  .features__title--second {
+
+    @media (min-width: @desktop-width) {
+    width: 718px;
+    line-height: 60px;
+    margin: 0 auto;
+    width: 500px;
+  }
 }
