--- a/less/features-items.less
+++ b/less/features-items.less
@@ -14,6 +14,16 @@
     @media (min-width: @tablet-width) {
       display: block;
     }
+
+    @media (min-width: @desktop-width) {
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      padding-top: 48px;
+      padding-left: 74px;
+      width: auto;
+      align-self: flex-end;
+    }
   }
 }
 
@@ -37,6 +47,17 @@
     padding-right: 20px;
     align-self: flex-end;
   }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+    flex-grow: 0;
+    min-width: 0;
+    flex-basis: 280px;
+    align-self: flex-start;
+    font-size: 18px;
+    padding-right: 0;
+    margin-left: 0;
+  }
 }
 
 .features-items__title {
@@ -54,6 +75,14 @@
     text-align: left;
     padding-left: 20px;
   }
+
+  @media (min-width: @desktop-width) {
+    font-size: 30px;
+    text-align: center;
+    line-height: 30px;
+    width: auto;
+    padding-left: 0;
+  }
 }
 
 .features-items__title--custom_size {
@@ -63,6 +92,15 @@
       width: 50%;
       padding-left: 20px;
       margin-top: 86px;
+    }
+
+    @media (min-width: @desktop-width) {
+      font-size: 30px;
+      width: auto;
+      margin-left: auto;
+      margin-right: auto;
+      letter-spacing: 1px;
+      padding-left: 58px;
     }
   }
 
@@ -78,8 +116,41 @@
     text-align: left;
     width: auto;
     margin-top: 12px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: center;
+    font-size: 18px;
+    line-height: 30px;
+    padding-left: 0;
+    padding-right: 0;
+    width: 243px;
+    margin: 0 auto;
+    padding-top: 25px;
+  }
 }
-}
+
+.features-items__descr--custom_description {
+
+      @media (min-width: @desktop-width) {
+
+        .font-mixin(30px;@header-font;18px; normal);
+        width: 524px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        padding-top: 0;
+        text-align: auto;
+      }
+
+      @media (min-width: @desktop-width) {
+        width: 523px;
+        padding-left: 270px;
+        text-align: -webkit-auto;
+        align-self: flex-end;
+      }
+    }
 
 .features-items__image-wrap {
   max-width: 100%;
@@ -90,9 +161,35 @@
   }
 }
 .features-items__link {
+
   @media (min-width: @tablet-width) {
     margin-left: 20px;
     color: #d22856;
     text-decoration: underline;
+
+    @media (min-width: @desktop-width) {
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 35px;
+      padding-top: 33px;
+    }
+  }
+}
+
+.features-items-group {
+
+   @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 307px;
+  }
+}
+
+.separator {
+
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
