--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -5,18 +5,18 @@
   flex-wrap: wrap;
   margin: 0 auto;
   padding-top: 108px;
-  @media (min-width: @desktop-width) {
-    background: none;
-    width: 38%;
-    justify-content:space-evenly;
-    margin: 0;
-    padding-left: 5%;
-  }
 
   @media (min-width: @tablet-width) {
     width: 49%;
     margin-left: 0;
     padding-top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    background: none;
+    margin: 0 auto;
+    margin-top: 109px;
+    justify-content: space-around;
   }
 }
 
@@ -26,6 +26,7 @@
 
 .os-nav__title {
   display: block;
+
   .font-mixin(24px; @content-font; 14px; normal);
   text-shadow:-3px -1px 15px #000000;
   width: 91%;
@@ -46,5 +47,10 @@
     width: 54%;
     margin-top: 60px;
     margin-left: 40px;
+  }
+
+ @media (min-width: @desktop-width) {
+  margin-right: auto;
+  margin-left: auto;
   }
 }
