--- a/less/style.less
+++ b/less/style.less
@@ -22,15 +22,27 @@
 
 .wrapper {
   margin: 0 auto;
+  max-width: 960px;
+  padding: 0 20px;
+  box-sizing: border-box;
+
+  @media (min-width:@tablet-width) {
+    box-sizing: content-box;
+  }
+
+  @media (min-width:@desktop-width) {
+    box-sizing: content-box;
+  }
 }
 
 .container {
   margin: 0 auto;
-  width: 100%;
+  max-width: 960px;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
   }
 }
 
@@ -38,8 +50,18 @@
   display: flex;
   flex-direction: column;
   align-content: stretch;
-  width: 100%;
+  max-width: 960px;
   margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+
+  @media (min-width:@tablet-width) {
+    box-sizing: content-box;
+  }
+
+  @media (min-width:@desktop-width) {
+    box-sizing: content-box;
+  }
 }
 
 @import "variables";
