made less for desktop

--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -1,8 +1,8 @@
 .features-headers {
-  padding-top: 38px;
-  margin:0 auto;
+  padding-top: 32px;
+  margin: 0 auto;
   text-align: center;
-  padding-bottom: 86px;
+  padding-bottom: 116px;
 
    .br-separator {
     display: none;
@@ -11,20 +11,24 @@
       display: inline;
     }
   }
-   @media (min-width: @tablet-width) {
-    width: 95%;
+  @media (min-width: @tablet-width) {
     padding:0;
     margin-top: 39px;
     line-height: 20px;
-    padding-bottom: 126px;
+    padding-bottom: 117px;
+    margin-left: 0;
+    margin-right: 0;
+    width: auto;
   }
 
   @media (min-width: @desktop-width) {
   background: @white;
   font-size: 50px;
-  margin-top: 41px;
+  margin-top: 60px;
   width: 737px;
   line-height: 0;
+  margin: 0 auto;
+  margin-top: 54px;
   }
 }
 
