--- a/less/radio-buttons-group.less
+++ b/less/radio-buttons-group.less
@@ -1,5 +1,10 @@
 .radio-buttons-group {
   padding-left: 20px;
+
+  @media (min-width:@desktop-width) {
+    padding-left: 77px;
+    padding-bottom: 39px;
+  }
 }
 
 .radio-buttons-group__label {
