--- a/less/user-form.less
+++ b/less/user-form.less
@@ -8,4 +8,9 @@
   @media (min-width: @tablet-width) {
     order:1;
   }
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
