--- a/less/achievments-page.less
+++ b/less/achievments-page.less
@@ -9,6 +9,10 @@
     margin-top: 0;
     margin-bottom: 60px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 17px;
+  }
 }
 
 .achievments-page__text {
@@ -20,6 +24,7 @@
   padding-left: 20px;
   width: 83%;
   padding-top: 25px;
+
   @media (min-width: @tablet-width) {
     padding-bottom: 21px;
     padding-top: 0;
@@ -28,5 +33,8 @@
     margin-left: auto;
     margin-right: auto;
     background: @white;
+  @media (min-width: @tablet-width) {
+    width: 64%;
+  }
   }
 }
