--- a/less/catalog-checkbox.less
+++ b/less/catalog-checkbox.less
@@ -1,10 +1,18 @@
 .catalog-checkbox {
+
   .font-mixin(30px;@header-font;18px;normal);
   padding-left: 20px;
   padding-top: 33px;
 
   @media (min-width: @tablet-width) {
 
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+    padding-left: 0;
   }
 }
 
@@ -53,4 +61,11 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-image: url('../img/icon-yes.svg');
+}
+
+.checkbox-group {
+
+  @media(min-width: @desktop-width) {
+    margin-right: 56px;
+  }
 }
