--- a/less/footer.less
+++ b/less/footer.less
@@ -43,7 +43,7 @@
     font-size: 50px;
     padding-left: 0;
     line-height: 60px;
-    padding-top: 294px;
+    padding-top: 104px;
     margin-top: 0;
   }
 }
@@ -53,7 +53,6 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  min-width: 320px;
   .font-mixin(24px;@font-size:18px;@font-weight:normal);
 
    @media (min-width: @tablet-width) {
@@ -67,9 +66,14 @@
   flex: 2;
   width: 100%;
   text-align: center;
+
   @media (min-width: @tablet-width) {
-    margin-top: 0px;
+    margin-top: 0;
   }
+
+   @media (min-width: @desktop-width) {
+    padding-right: 384px;
+   }
 }
 
 .info-block__mail-block {
@@ -92,8 +96,14 @@
 .phone__text {
   font-weight: bold;
   letter-spacing: 1px;
+
   @media (min-width: @tablet-width) {
     margin-top: 0px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: -4px;
+    margin-bottom: 35px;
   }
 }
 
@@ -113,8 +123,13 @@
   letter-spacing: 1px;
   margin-top: 33px;
   text-align: center;
+
   @media (min-width: @tablet-width) {
     margin-top: 0px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 39px;
   }
 }
 
@@ -124,6 +139,10 @@
   @media (min-width: @tablet-width) {
     margin-top: 20px;
   }
+
+   @media (min-width: @desktop-width) {
+    margin-top: -28px;
+   }
 }
 
 .map-block__text {
@@ -132,6 +151,11 @@
   text-align: center;
   margin-top: 51px;
   letter-spacing: 1px;
+
+  @media (min-width: @desktop-width) {
+    margin-top: -15px;
+    margin-bottom: 39px;
+  }
 }
 
 .map-block__link {
@@ -146,10 +170,16 @@
 
 address {
   font-style: normal;
-  width: 90%;
+  width: auto;
+
   @media (min-width: @tablet-width) {
     width: auto;
     margin-left: 3%;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 0;
+    margin-bottom: 32px;
   }
 }
 
