--- a/less/form-section.less
+++ b/less/form-section.less
@@ -3,11 +3,18 @@
 }
 
 .form-section__text-area {
+
   @media (min-width: @tablet-width) {
     width: 94%;
     margin-right: 61px;
     margin-top: 13px;
     margin-left: 15px;
+
+    @media (min-width: @desktop-width) {
+      height: 115px;
+      margin-left: 25px;
+      width: 94%;
+    }
   }
 }
 
