--- a/less/info-user.less
+++ b/less/info-user.less
@@ -6,11 +6,22 @@
   .font-mixin(30px;@header-font;14px;normal);
   text-align: center;
   margin: 0 auto;
+
   @media (min-width: @tablet-width) {
     width: 78%;
     padding-top: 10%;
     padding-bottom: 10%;
   }
+
+   @media (min-width: @desktop-width) {
+    margin-top: 0;
+    width: 83%;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0 auto;
+    padding-top: 89px;
+    padding-bottom: 87px;
+   }
 }
 
 .info-user__text {
@@ -24,6 +35,22 @@
     font-size: 18px;
     margin: 0;
     padding-left: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+    margin-top: 0;
+    font-size: 18px;
+  }
+}
+.separator__form-text--desktop {
+
+  @media(min-width:@tablet-width) {
+    display: inline;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
 
@@ -45,5 +72,8 @@
     font-size: 18px;
     padding-left: 20px;
 
+    @media (min-width: @desktop-width) {
+      padding-left: 0;
+    }
   }
 }
