--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -29,10 +29,12 @@
 
   .font-mixin(24px; @content-font; 14px; normal);
   text-shadow:-3px -1px 15px #000000;
-  width: 91%;
+  width: auto;
   margin-left: 20px;
   margin-top: 60px;
   text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 0;
 
   .font-mixin(24px; @content-font; 14px; normal);
   text-shadow: -3px -1px 15px #000000;
@@ -46,7 +48,7 @@
     margin-left: 0;
     width: 54%;
     margin-top: 60px;
-    margin-left: 40px;
+    margin-left: 0;
   }
 
  @media (min-width: @desktop-width) {
