--- a/less/promo-download.less
+++ b/less/promo-download.less
@@ -6,13 +6,15 @@
   flex-direction: column;
   position: relative;
   color: #ffffff;
-  padding-bottom: 9px;
+  padding-bottom: 0;
   @media (min-width: @desktop-width) {
     background: none;
+    padding-bottom: 9px;
   }
 
   @media (min-width: @tablet-width) {
     background: none;
+    padding-bottom: 9px;
   }
 }
 
