--- a/less/promo-section.less
+++ b/less/promo-section.less
@@ -40,12 +40,12 @@
 
   @media (min-width: @tablet-width) {
     display: block;
+
      .font-mixin(44px;@content-font;40px;normal);
-     margin-left: 95px;
+     margin-left: 73px;
      width: 30%;
-     margin-top: 151px;
+     margin-top: 114px;
      text-align: center;
-     margin-top: 103px;
      color: @white;
 
    @media (min-width: @desktop-width) {
@@ -53,6 +53,7 @@
     margin-left: 0;
     padding-top: 15px;
     line-height: 60px;
+    margin-right: auto;
     width: auto;
    }
   }
