--- a/less/reviews.less
+++ b/less/reviews.less
@@ -27,7 +27,7 @@
 }
 
 .slider-reviews__header {
-  margin-top: 42px;
+  margin-top: 32px;
   font-size: 18px;
   text-align: center;
   letter-spacing: 1px;
@@ -56,17 +56,17 @@
 
 .slider-reviews__text {
   text-align: center;
-  margin-left: 20px;
-  width: 97%;
+  width: auto;
   text-align: center;
 
   @media (min-width: @tablet-width)  {
-    order:3;
+    order: 3;
     padding-left: 20px;
     width: auto;
+    margin-left: 20px;
   }
-  @media (min-width: @desktop-width) {
 
+  @media (min-width: @desktop-width) {
     text-align: center;
     padding-left: 95px;
     padding-right: 95px;
