--- a/less/user-address.less
+++ b/less/user-address.less
@@ -1,4 +1,5 @@
 .user-address {
+
   .font-mixin(30px;@header-font;14px;normal);
   color: #d22856;
   width: 100%;
@@ -7,6 +8,11 @@
 
   @media (min-width: @tablet-width) {
     order: 3;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-right: 0;
+    margin-top: 18px
   }
 }
 
