--- a/less/user-contacts.less
+++ b/less/user-contacts.less
@@ -9,6 +9,10 @@
 .user-contacts__label {
   width: 90%;
   padding-left: 20px;
+
+ @media (min-width: @desktop-width) {
+  margin-left: 17px;
+  }
 }
 
 .phone_number {
@@ -16,6 +20,12 @@
   @media (min-width: @tablet-width) {
     order: 2;
     margin-bottom: 41px;
+  @media (min-width: @desktop-width) {
+    height: 0;
+    width: auto;
+    padding: 0;
+    margin: 0;
+  }
   }
 }
 
@@ -24,11 +34,24 @@
   @media (min-width: @tablet-width) {
     order: 1;
   }
+  @media (min-width: @desktop-width) {
+    height: 0;
+    width: auto;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .mail_address {
+
   @media (min-width: @tablet-width) {
     order: 4;
+  }
+  @media (min-width: @desktop-width) {
+    height: 0;
+    width: auto;
+    padding: 0;
+    margin-top:11px;
   }
 }
 
@@ -68,6 +91,13 @@
     background: @white;
     width: 47%;
   }
+  @media (min-width: @desktop-width) {
+    display: inline;
+    width: 224px;
+    height: auto;
+    margin-top: -16px;
+    margin-left: 269px;
+  }
 }
 
 .user-contacts__input--mobile_hidden {
@@ -88,12 +118,5 @@
 
   @media (min-width: @tablet-width) {
     display: none;
-  }
-}
-
-.form--user-contacts {
-
-  @media (min-width: @tablet-width) {
-    margin-top: 50px;
   }
 }
