--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -5,7 +5,20 @@
 }
 
 .describe-block__text {
+
   .font-mixin(30px;@header-font;14px;normal);
   padding-top: 16px;
   padding-left: 20px;
+
+  @media (min-width:@tablet-width) {
+    font-size: 18px;
+  }
+}
+
+.separator-tablet {
+  display: none;
+
+  @media (min-width:@tablet-width) {
+    display: inline;
+  }
 }
