--- a/less/blog-post.less
+++ b/less/blog-post.less
@@ -4,14 +4,28 @@
   align-items: center;
   flex-direction: column;
   background-color: #f2f2f2;
-}
 
+ @media(min-width:@tablet-width) {
+    padding-bottom: 0;
+    background-color: @white;
+    width: auto;
+    flex-basis: 300px;
+    padding-bottom: 20px;
+  }
+}
 .blog-post__item {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
   padding-bottom: 38px;
+
+  @media(min-width:@tablet-width) {
+    padding-bottom: 0;
+    flex-grow:0;
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
 .blog-post__image {
@@ -19,12 +33,34 @@
   padding-left: 20px;
   padding-right: 20px;
   width: 86%;
+
+  @media(min-width:@tablet-width) {
+    width: 300px;
+    height: 300px;
+    padding-left: 0;
+    padding-right: 0;
+    background: red;
+  }
 }
 
 .blog-post__body {
   padding-left: 20px;
 
   .font-mixin(24px;@header-font;14px;normal);
+
+   @media (min-width:@tablet-width) {
+    padding-bottom: 0;
+    background-color: #f2f2f2;
+    width: 93%;
+    min-height: 137px;
+    padding-bottom: 22px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.blog-post__panorama {
+
 }
 
 .blog-post__header {
@@ -39,6 +75,9 @@
 .blog-post__text {
   padding: 0;
   margin: 0;
+  @media(min-width:@tablet-width) {
+    padding-left: 17px;
+  }
 }
 
 .blog-post__info {
@@ -48,6 +87,10 @@
 
 img {
   max-width: 100%;
+
+  @media(min-width:@tablet-width) {
+    width: 100%;
+  }
 }
 
 .like-text,
@@ -85,4 +128,43 @@ img {
   right: 27px;
   padding-bottom: 7px;
   padding-top: 4px;
+}
+
+.mobile-img {
+
+  @media(min-width:@tablet-width) {
+    display: none;
+  }
+}
+
+.temp-img {
+  display: none;
+
+  @media(min-width:@tablet-width) {
+
+    display: block;
+  }
+}
+
+.mobile-photo {
+
+   @media(min-width:@tablet-width) {
+    display: none;
+   }
+}
+
+.blog-items {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+
+.blog-header {
+  padding-left: 15px;
+  padding-top: 14px;
+}
+
+.blog-post__info--photo {
+  margin-top: auto;
 }
