--- a/less/style.less
+++ b/less/style.less
@@ -28,11 +28,11 @@
   width: 100%;
 
   @media (min-width:@tablet-width) {
-    box-sizing: content-box;
+    box-sizing: border-box;
   }
 
   @media (min-width:@desktop-width) {
-    box-sizing: content-box;
+    box-sizing: border-box;
   }
 }
 
@@ -104,3 +104,4 @@
 @import "form";
 @import "label-block";
 @import "traffic-table";
+@import "panorama";
