--- a/less/contest-page.less
+++ b/less/contest-page.less
@@ -9,6 +9,11 @@
   @media(min-width:@tablet-width) {
     padding-bottom: 76px;
   }
+
+  @media(min-width:@desktop-width) {
+    margin: 0 auto;
+    width: 52%;
+  }
 }
 
 .contest-page__text {
@@ -27,5 +32,8 @@
     margin-right: auto;
     margin-top: 83px;
     line-height: 60px;
+  }
+
+  @media(min-width:@desktop-width) {
   }
 }
