--- a/less/style.less
+++ b/less/style.less
@@ -29,6 +29,7 @@
 
   @media (min-width:@tablet-width) {
     box-sizing: border-box;
+    padding: 0 20px;
   }
 
   @media (min-width:@desktop-width) {
@@ -60,6 +61,7 @@
 
   @media (min-width:@tablet-width) {
     box-sizing: border-box;
+    padding: 0 20px;
   }
 
   @media (min-width:@desktop-width) {
@@ -105,3 +107,6 @@
 @import "label-block";
 @import "traffic-table";
 @import "panorama";
+@import "image-editor__image-block";
+@import "controls";
+@import "buttons-block";
