--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -2,6 +2,10 @@
   width: 100%;
   text-align: center;
   padding-bottom: 63px;
+
+  @media (min-width:@desktop-width) {
+    padding-bottom: 50px;
+  }
 }
 
 .describe-block__text {
@@ -12,6 +16,15 @@
 
   @media (min-width:@tablet-width) {
     font-size: 18px;
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 34px;
+  }
+  @media (min-width:@desktop-width) {
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 0;
+    margin-top: 0;
   }
 }
 
@@ -20,5 +33,8 @@
 
   @media (min-width:@tablet-width) {
     display: inline;
+  }
+   @media (min-width:@desktop-width) {
+    display: none;
   }
 }
