--- a/less/page-shown-footer.less
+++ b/less/page-shown-footer.less
@@ -6,17 +6,17 @@
 
    @media (min-width: @tablet-width) {
     display: block;
+    padding-top: 43px;
    }
 
    @media (min-width: @desktop-width) {
      display: block;
-     height: 92px;
-     padding-top: 46px;
-
+     padding-top: 107px;
    }
  }
 
 .page-shown-footer__copyright {
+
   @media (min-width: @tablet-width) {
     display: flex;
   }
@@ -51,5 +51,16 @@
     padding-left: 20px;
     padding-right: 20px;
     align-content: baseline;
+  }
+}
+
+.footer {
+
+  @media(min-width: @tablet-width) {
+    display: flex;
+  }
+
+  @media(min-width: @tablet-width) {
+  justify-content: space-between;
   }
 }
