--- a/less/panorama.less
+++ b/less/panorama.less
@@ -3,19 +3,30 @@
 }
 
 .panorama-body {
+  padding-top: 18px;
+  padding-left: 19px;
+  padding-right: 19px;
+  padding-bottom: 20px;
 
   @media(min-width: @tablet-width) {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   padding-top: 9px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding-left: 33px;
+  padding-left: 20px;
+  padding-right: 46px;
   padding-bottom: 26px;
   width: auto;
   height: auto;
   min-height: auto;
+
+  @media(min-width: @desktop-width) {
+    padding-left: 28px;
+    padding-right: 21px;
+    padding-bottom: 21px;
+    width: auto;
+    height: auto;
+  }
   }
 }
 
@@ -31,7 +42,6 @@
 
   @media(min-width: @tablet-width) {
     margin-left: auto;
-    padding-right: 41px;
   }
 }
 
@@ -47,7 +57,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #f2f2f2;
+  background-color: @white;
+  margin-bottom: 17px;
 
  @media(min-width:@tablet-width) {
     padding-bottom: 49px;
@@ -60,7 +71,7 @@
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
-  padding-bottom: 38px;
+  padding-bottom: 0;
 
   @media(min-width:@tablet-width) {
     padding-bottom: 0;
@@ -69,15 +80,18 @@
 
 .panorama-blog__image {
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 86%;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
 
   @media(min-width:@tablet-width) {
-    width: 300px;
     height: auto;
     width: 100%;
     position: relative;
     padding-left: 0;
+    padding-right: 0;
   }
+ @media(min-width:@desktop-width) {
+  height: auto;
+ }
 }
