--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -1,29 +1,40 @@
 .user-blogs {
-  width: 100%;
+  width: 93%;
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  padding-bottom: 22px;
 
   @media(min-width:@tablet-width) {
   font-size: 18px;
   margin: 0 auto;
   padding-top: 58px;
   padding-bottom: 32px;
-
+  width: 83%;
   }
 }
 
 .user-blogs__text {
-  padding-bottom: 43px;
+  padding-bottom: 0;
 
   .font-mixin(30px;@header-font;14px;normal);
-  padding-top: 33px;
-  padding-left: 20px;
-  width: 83%;
+  padding-top: 49px;
+  padding-left: 0px;
+  width: 100%;
+  margin: 0 auto;
 
   @media(min-width:@tablet-width) {
   font-size: 18px;
   margin: 0 auto;
-
+  width: 100%;
   }
 }
+
+.mobile-separator {
+  display: inline;
+
+    @media(min-width:@tablet-width) {
+      display: none;
+    }
+  }
