--- a/less/panorama.less
+++ b/less/panorama.less
@@ -83,7 +83,7 @@
   padding-left: 0;
   padding-right: 0;
   width: 100%;
-
+  position: relative;
   @media(min-width:@tablet-width) {
     height: auto;
     width: 100%;
