--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -1,5 +1,5 @@
 .user-blogs {
-  width: 93%;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -21,7 +21,7 @@
   .font-mixin(30px;@header-font;14px;normal);
   padding-top: 49px;
   padding-left: 0px;
-  width: 100%;
+  width: 243px;
   margin: 0 auto;
 
   @media(min-width:@tablet-width) {
