mobile version fixes

--- a/less/controls.less
+++ b/less/controls.less
@@ -7,3 +7,16 @@
     padding-bottom: 36px;
   }
 }
+
+.controls--fill,
+.controls--contrast {
+   display: none;
+
+  @media(min-width: @tablet-width) {
+    display: block;
+  }
+
+  @media(min-width: @desktop-width)  {
+    display: block;
+  }
+}
