--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -11,8 +11,8 @@
 .describe-block__text {
 
   .font-mixin(30px;@header-font;14px;normal);
-  padding-top: 16px;
-  padding-left: 20px;
+  margin: 0 auto;
+  padding-top: 27px;
 
   @media (min-width:@tablet-width) {
     font-size: 18px;
@@ -29,7 +29,7 @@
 }
 
 .separator-tablet {
-  display: none;
+  display: inline;
 
   @media (min-width:@tablet-width) {
     display: inline;
