--- a/less/filter-range.less
+++ b/less/filter-range.less
@@ -1,7 +1,7 @@
 .filter-range {
-  width: 87%;
+  width: 239px;
   position: relative;
-  padding-left: 20px;
+  left: -23px;
 
   @media(min-width:@tablet-width) {
     width: 204px;
