--- a/less/image-editor__image-block.less
+++ b/less/image-editor__image-block.less
@@ -1,4 +1,5 @@
 .image-editor__image-block {
+  padding: 0;
 
   @media(min-width: @tablet-width) {
   background-color: aqua;
@@ -17,5 +18,32 @@
   @media(min-width: @tablet-width) {
   flex-direction: row;
   flex-wrap: wrap;
+  }
+}
+
+.image-editor__tools-list {
+  margin-top: 119px;
+  margin-bottom: 70px;
+
+  @media(min-width: @tablet-width) {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  @media(min-width: @desktop-width)  {
+    display: block;
+  }
+}
+
+.image-editor__tools--contrast,
+.image-editor__tools--fill{
+  display: none;
+
+  @media(min-width: @tablet-width) {
+    display: block;
+  }
+
+  @media(min-width: @desktop-width)  {
+    display: block;
   }
 }
