--- a/less/editor-block.less
+++ b/less/editor-block.less
@@ -4,7 +4,7 @@
   background-color: #f2f2f2;
   position: relative;
   width: 100%;
-  padding-bottom: 39px;
+  padding-bottom: 9px;
 
   @media (min-width:@tablet-width) {
     padding-top: 36px;
@@ -15,7 +15,7 @@
 .editor-block__button,
 .editor-block__button--disable {
   display: block;
-  width: 78%;
+  width: 100%;
   padding-left: 20px;
   text-decoration: none;
 
@@ -23,9 +23,9 @@
   color: #d22856;
   border: 3px solid #d22856;
   text-align: center;
-  margin-left: 18px;
+  margin-left: 0;
   padding-top: 16px;
-  margin-top: 26px;
+  margin-top: 12px;
   padding-right: 14px;
   border-radius: 25px;
   padding-bottom: 16px;
@@ -57,7 +57,7 @@
 }
 
 .image-editor__tools {
-  padding-top: 88px;
+  padding-top: 0;
 
   @media (min-width:@tablet-width) {
     padding-top: 0;
