--- a/less/page-shown-footer.less
+++ b/less/page-shown-footer.less
@@ -2,7 +2,6 @@
   width: 100%;
   text-align: center;
   background-color: @white;
-  display: none;
 
    @media (min-width: @tablet-width) {
     display: block;
@@ -55,9 +54,12 @@
 }
 
 .footer {
+  display: flex;
+  flex-direction:column;
 
   @media(min-width: @tablet-width) {
     display: flex;
+    flex-direction:row;
   }
 
   @media(min-width: @tablet-width) {
