--- a/less/panorama.less
+++ b/less/panorama.less
@@ -3,9 +3,9 @@
 }
 
 .panorama-body {
-  padding-top: 18px;
-  padding-left: 19px;
-  padding-right: 19px;
+  padding-top: 5px;
+  padding-left: 16px;
+  padding-right: 10px;
   padding-bottom: 20px;
 
   @media(min-width: @tablet-width) {
@@ -39,6 +39,8 @@
 }
 
 .panorama-info {
+  padding-top: 8px;
+  padding-left: 32px;
 
   @media(min-width: @tablet-width) {
     margin-left: auto;
@@ -58,7 +60,7 @@
   align-items: center;
   flex-direction: column;
   background-color: @white;
-  margin-bottom: 17px;
+  margin-bottom: 19px;
 
  @media(min-width:@tablet-width) {
     padding-bottom: 49px;
@@ -94,4 +96,8 @@
  @media(min-width:@desktop-width) {
   height: auto;
  }
+}
+
+img {
+  width: 100%;
 }
