--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -16,10 +16,10 @@
 }
 
 .user-blogs__text {
-  padding-bottom: 0;
+  padding-bottom: 23px;
 
   .font-mixin(30px;@header-font;14px;normal);
-  padding-top: 49px;
+  padding-top: 46px;
   padding-left: 0px;
   width: 243px;
   margin: 0 auto;
