--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -6,6 +6,11 @@
   @media (min-width:@desktop-width) {
     padding-bottom: 50px;
   }
+
+  @media(min-width: @desktop-width) {
+    padding-bottom: 67px;
+    padding-top: 12px;
+  }
 }
 
 .describe-block__text {
