--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -8,14 +8,14 @@
     display: none;
 
     @media (min-width: @tablet-width) {
-      display: inline;
+     - display: inline;
     }
   }
   @media (min-width: @tablet-width) {
     padding:0;
-    margin-top: 39px;
+    margin-top: 52px;
     line-height: 20px;
-    padding-bottom: 117px;
+    padding-bottom: 125px;
     margin-left: 0;
     margin-right: 0;
     width: auto;
