--- a/less/promo-section.less
+++ b/less/promo-section.less
@@ -42,16 +42,16 @@
     display: block;
 
      .font-mixin(44px;@content-font;40px;normal);
-     margin-left: 73px;
+     margin-left: 56px;
      width: 30%;
-     margin-top: 114px;
+     margin-top: 107px;
      text-align: center;
      color: @white;
 
    @media (min-width: @desktop-width) {
     font-size: 50px;
     margin-left: 0;
-    padding-top: 15px;
+    padding-top: 0;
     line-height: 60px;
     margin-right: auto;
     width: auto;
