--- a/less/features-items.less
+++ b/less/features-items.less
@@ -19,7 +19,7 @@
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      padding-top: 48px;
+      padding-top: 54px;
       padding-left: 74px;
       width: auto;
       align-self: flex-end;
@@ -42,10 +42,11 @@
   padding-bottom: 16px;
 
   @media (min-width: @tablet-width) {
-    width: 49%;
-    padding-right: 19px;
+    width: 53%;
+    padding-right: 0;
     align-self: flex-end;
     margin-left: auto;
+    padding-bottom: 20px;
   }
 
   @media (min-width: @desktop-width) {
@@ -88,10 +89,14 @@
 .features-items__title--custom_size {
 
     @media (min-width: @tablet-width) {
+
       .font-mixin(33px;@header-font;30px;bold);
-      width: 50%;
-      padding-left: 20px;
-      margin-top: 86px;
+      width: auto;
+      padding-left: 18px;
+      margin-top: 100px;
+      margin-bottom: 0;
+      width: auto;
+      padding-bottom: 20px;
     }
 
     @media (min-width: @desktop-width) {
@@ -100,7 +105,7 @@
       margin-left: auto;
       margin-right: auto;
       letter-spacing: 1px;
-      padding-left: 40px;
+      padding-left: 18px;
     }
   }
 
@@ -132,22 +137,31 @@
 
 .features-items__descr--custom_description {
 
-      @media (min-width: @desktop-width) {
+  @media(min-width: @tablet-width) {
+    text-align: left;
+    width: 549px;
+    width: 305px;
+    padding-left: 20px;
+    margin-top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
 
         .font-mixin(30px;@header-font;18px; normal);
-        width: 524px;
+        width: 550px;
         display: block;
         margin-left: auto;
         margin-right: auto;
         margin-top: 0;
+        padding-left: 247px;
         padding-top: 0;
-        text-align: auto;
+        text-align: left;
       }
 
       @media (min-width: @desktop-width) {
-        width: 523px;
+        width: 548px;
         padding-left: 270px;
-        text-align: -webkit-auto;
+        text-align: left;
         align-self: flex-end;
       }
     }
@@ -170,7 +184,7 @@
     @media (min-width: @desktop-width) {
       margin-left: auto;
       margin-right: auto;
-      padding-left: 35px;
+      padding-left: 8px;
       padding-top: 33px;
     }
   }
@@ -182,8 +196,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 307px;
+    justify-content: space-between;
+    padding-top: 319px;
+
+    @media (min-width: @tablet-width) {
+      padding-bottom: 21px;
+    }
   }
 }
 
