--- a/less/footer.less
+++ b/less/footer.less
@@ -17,6 +17,10 @@
 
   .font-mixin(20px; @header-font; 18px; bold);
   background-color: @white;
+
+  @media (min-width: @desktop-width) {
+    padding-top: 153px;
+  }
 }
 
 .info-block__wrapper {
@@ -43,7 +47,8 @@
     font-size: 50px;
     padding-left: 0;
     line-height: 60px;
-    padding-top: 104px;
+    padding-top: 9px;
+    padding-bottom: 8px;
     margin-top: 0;
   }
 }
