--- a/less/reviews.less
+++ b/less/reviews.less
@@ -7,6 +7,10 @@
    @media (min-width: @tablet-width) {
     font-size: 18px;
   }
+  @media (min-width: @desktop-width) {
+    padding-top: 163px;
+    padding-bottom: 169px;
+  }
 }
 
 .slider-reviews {
@@ -18,9 +22,10 @@
     width: 100%;
     margin: 0 auto;
     padding-top: 106px;
+    padding-bottom: 132px;
   }
   @media (min-width: @desktop-width) {
-    padding-top: 297px;
+    padding-top: 124px;
     padding-left: 0;
 
   }
@@ -51,6 +56,9 @@
       font-weight: normal;
       order: 2;
     }
+    @media (min-width: @desktop-width) {
+      font-size: 18px;
+    }
   }
 }
 
@@ -61,9 +69,8 @@
 
   @media (min-width: @tablet-width)  {
     order: 3;
-    padding-left: 20px;
     width: auto;
-    margin-left: 20px;
+    margin-left: 0;
   }
 
   @media (min-width: @desktop-width) {
