--- a/less/traffic-table.less
+++ b/less/traffic-table.less
@@ -1,27 +1,40 @@
 .traffic-table {
-  width: 78%;
+  width: 99%;
   margin: 0 auto;
   border-collapse: collapse;
   display: table;
-  border-color: grey;
-  border-spacing: 0;
+  // border-color: grey;
+  border:none;
+
+  tr {
+    border: none;
+  }
 }
 
 .traffic-table__head {
   display: table-header-group;
   vertical-align: middle;
   border-color: inherit;
+  border:none;
 }
 
 .traffic-table_headcell {
-  padding-left: 28px;
+  padding-left: 62px;
   padding-right: 64px;
+  padding-bottom: 17px;
+  padding-top: 15px;
   // padding-top: 16px;
   // padding-bottom: 23px;
   background-color: #283645;
   border-top: 2px solid #283645;
   border-right: 2px solid #e5e5e5;
   border-left: 2px solid #e5e5e5;
+}
+
+.traffic-table_headcell--no-borders {
+  background-color: transparent;
+  border:none;
+  border-top: none;
 }
 
 .traffic-table__body {
@@ -40,7 +53,7 @@
   background-color: #fff;
   background-repeat: no-repeat;
   padding-right: 69px;
-  padding-left: 10px;
+  padding-left: 16px;
 
   .font-mixin(30px;@header-font;18px;normal);
 }
