--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -9,9 +9,15 @@
   @media(min-width:@tablet-width) {
   font-size: 18px;
   margin: 0 auto;
-  padding-top: 58px;
-  padding-bottom: 32px;
+  padding-top: 45px;
+  padding-bottom: 52px;
   width: 83%;
+  }
+
+  @media(min-width:@desktop-width) {
+    padding-top: 90px;
+    padding-bottom: 65px;
+    width: 100%;
   }
 }
 
@@ -29,6 +35,10 @@
   margin: 0 auto;
   width: 100%;
   }
+
+  @media(min-width:@desktop-width) {
+    padding-top: 0;
+  }
 }
 
 .mobile-separator {
@@ -37,4 +47,11 @@
     @media(min-width:@tablet-width) {
       display: none;
     }
+}
+
+.mobile-separator--desktop {
+
+  @media(min-width:@desktop-width) {
+    display: inline;
   }
+}
