--- a/less/footer.less
+++ b/less/footer.less
@@ -37,10 +37,11 @@
   text-align: center;
 
   @media(min-width: @tablet-width) {
+
     .font-mixin(40px;@content-font;40px;normal);
-    margin-top: 81px;
-    padding-left: 2%;
-    padding-bottom: 21px;
+    margin-top: 40px;
+    padding-left: 0;
+    padding-bottom: 17px;
     }
 
   @media(min-width: @desktop-width) {
@@ -141,6 +142,7 @@
 .map-block {
   margin: 0 auto;
   width: 100%;
+
   @media (min-width: @tablet-width) {
     margin-top: 20px;
   }
@@ -154,7 +156,7 @@
   line-height: 0;
   font-weight: bold;
   text-align: center;
-  margin-top: 51px;
+  margin-top: 57px;
   letter-spacing: 1px;
 
   @media (min-width: @desktop-width) {
@@ -173,13 +175,18 @@
   text-align: center;
 }
 
+ @media (min-width: @tablet-width) {
+  margin-right: 20px;
+  line-height: 30px;
+}
+
 address {
   font-style: normal;
   width: auto;
 
   @media (min-width: @tablet-width) {
     width: auto;
-    margin-left: 3%;
+    margin-left: 0;
   }
 
   @media (min-width: @desktop-width) {
