--- a/less/panorama.less
+++ b/less/panorama.less
@@ -32,6 +32,8 @@
 }
 
 .panorama-text {
+  padding-left: 0;
+  padding-right: 0;
 
   @media(min-width: @tablet-width) {
     order: 2;
@@ -109,9 +111,9 @@
     padding-left: 0;
     padding-right: 0;
   }
- @media(min-width:@desktop-width) {
+  @media(min-width:@desktop-width) {
   height: auto;
- }
+  }
 }
 
 img {
