--- a/less/user-form.less
+++ b/less/user-form.less
@@ -8,9 +8,17 @@
   @media (min-width: @tablet-width) {
     order:1;
   }
+
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+}
+
+.user-forms {
+
+  @media (min-width: @desktop-width) {
+    padding: 0 9px;
   }
 }
