--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -4,15 +4,15 @@
   text-align: center;
   padding-bottom: 116px;
 
-    .br-separator {
+  .br-separator {
     display: none;
 
     @media (min-width: @tablet-width) {
-      - display: inline;
+      //-display: inline;
     }
   }
   @media (min-width: @tablet-width) {
-    padding:0;
+    padding: 0;
     margin-top: 52px;
     line-height: 20px;
     padding-bottom: 125px;
@@ -22,12 +22,12 @@
   }
 
   @media (min-width: @desktop-width) {
-  background: @white;
-  font-size: 50px;
-  margin-top: 60px;
-  width: 737px;
-  line-height: 0;
-  margin: 0 auto;
-  margin-top: 81px;
+    background: @white;
+    font-size: 50px;
+    margin-top: 60px;
+    width: 737px;
+    line-height: 0;
+    margin: 0 auto;
+    margin-top: 81px;
   }
 }
