--- a/less/info-user.less
+++ b/less/info-user.less
@@ -14,13 +14,13 @@
   }
 
     @media (min-width: @desktop-width) {
-    margin-top: 0;
+    margin-top: 77px;
     width: 83%;
     padding-left: 0;
     padding-right: 0;
     margin: 0 auto;
-    padding-top: 89px;
-    padding-bottom: 87px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     }
 }
 
@@ -41,11 +41,12 @@
     padding-top: 0;
     margin-top: 0;
     font-size: 18px;
+    padding-left: 0;
   }
 }
 .separator__form-text--desktop {
 
-  @media(min-width:@tablet-width) {
+  @media (min-width: @tablet-width) {
     display: inline;
   }
 
