--- a/less/input-form.less
+++ b/less/input-form.less
@@ -4,27 +4,28 @@
     display: flex;
     justify-content:unset;
     flex-direction:row;
+  }
 
+  @media (min-width: @desktop-width) {
+    margin-right: 40px;
   }
-  }
+}
+
   .input-block__form:nth-of-type(1) {
 
     @media (min-width: @tablet-width) {
-      order:2;
     }
   }
 
   .input-block__form:nth-of-type(2) {
 
     @media (min-width: @tablet-width) {
-      order:1;
   }
 }
 
 .input-block__form:nth-of-type(3) {
 
     @media (min-width: @tablet-width) {
-      order:3;
   }
 }
 
