--- a/less/editor-block.less
+++ b/less/editor-block.less
@@ -65,10 +65,10 @@
 }
 
 .editor-block__button {
-
   @media (min-width: @tablet-width) {
     margin-left: 0;
-    margin: 0 auto;
+    margin-top: 0;
+    margin-right: auto;
     margin-bottom: 22px;
     width: 259px;
     padding-right: 34px;
