--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -11,6 +11,7 @@
       //-display: inline;
     }
   }
+
   @media (min-width: @tablet-width) {
     padding: 0;
     margin-top: 52px;
@@ -24,10 +25,11 @@
   @media (min-width: @desktop-width) {
     background: @white;
     font-size: 50px;
-    margin-top: 60px;
     width: 737px;
     line-height: 0;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
     margin-top: 81px;
   }
 }
