--- a/less/footer.less
+++ b/less/footer.less
@@ -84,6 +84,7 @@
 .info-block__mail-block {
   margin: 0 auto;
   flex: 2;
+
   @media (min-width: @tablet-width) {
     flex-direction: row;
   }
@@ -103,7 +104,7 @@
   letter-spacing: 1px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -130,7 +131,7 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   @media (min-width: @desktop-width) {
