--- a/less/form.less
+++ b/less/form.less
@@ -1,5 +1,4 @@
 .form {
-
   @media (min-width: @tablet-width) {
     width: 75%;
     padding: 6%;
@@ -11,12 +10,13 @@
     width: 434px;
     margin-left: 45px;
     padding: 0;
-    margin: 0 auto;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: auto;
   }
 }
 
 .form__user-contacts {
-
   @media (min-width: @tablet-width) {
     width: 75%;
     padding: 6%;
@@ -41,7 +41,6 @@
 }
 
 .form--achievments-page {
-
   @media (min-width: @tablet-width) {
     width: 75%;
     padding: 6%;
@@ -50,8 +49,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 434px;
-    margin-left: 45px;
     display: flex;
     justify-content: space-between;
     width: 97%;
@@ -67,10 +64,7 @@
 }
 
 .form--feedback {
-
   @media (min-width: @desktop-width) {
-    width: 434px;
-    margin-left: 45px;
     display: flex;
     justify-content: space-between;
     width: 97%;
@@ -86,7 +80,6 @@
 }
 
 .form-container {
-
   @media (min-width: @desktop-width) {
     width: 100%;
     padding-left: 28px;
