--- a/less/info-user.less
+++ b/less/info-user.less
@@ -18,7 +18,9 @@
     width: 83%;
     padding-left: 0;
     padding-right: 0;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
     padding-top: 80px;
     padding-bottom: 80px;
   }
