--- a/less/input-form.less
+++ b/less/input-form.less
@@ -1,5 +1,4 @@
 .input-block__form {
-
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: unset;
@@ -8,24 +7,6 @@
 
   @media (min-width: @desktop-width) {
     margin-right: 40px;
-  }
-}
-
-.input-block__form:nth-of-type(1) {
-
-  @media (min-width: @tablet-width) {
-  }
-}
-
-.input-block__form:nth-of-type(2) {
-
-  @media (min-width: @tablet-width) {
-  }
-}
-
-.input-block__form:nth-of-type(3) {
-
-  @media (min-width: @tablet-width) {
   }
 }
 
@@ -72,13 +53,14 @@
     padding-right: 18px;
     width: 331px;
     height: 59px;
-    padding: 0;
+    padding-top: 0;
+    padding-left: 0;
+    padding-bottom: 0;
     margin-top: 0;
   }
 }
 
 .input-form__input-label--short_letters {
-
   @media (min-width: @desktop-width) {
     width: 377px;
   }
