--- a/less/promo-section.less
+++ b/less/promo-section.less
@@ -25,13 +25,13 @@
 
   @media (min-width: @desktop-width) {
     content: "";
-    background-image: url('');
+    background-image: url("");
   }
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 0px;
+    padding-bottom: 0;
     content: "";
-    background-image: url('');
+    background-image: url("");
   }
 }
 
@@ -60,9 +60,7 @@
 }
 
 .index-wrapper {
-
   @media (min-width: @desktop-width) {
-    margin-left: 0;
     max-width: 548px;
     margin-left: 136px;
     text-align: center;
