--- a/less/radio-buttons-group.less
+++ b/less/radio-buttons-group.less
@@ -59,8 +59,8 @@
   top: 1px;
   left: 2px;
   transform: translate(50%, 50%);
+  //background: (lighten(#d22856, 10%));
   background-repeat: no-repeat;
   background-size: contain;
   border-radius: 100%;
-  background: lighten(#d22856, 10%);
 }
