--- a/less/traffic-table.less
+++ b/less/traffic-table.less
@@ -73,9 +73,8 @@
   display: table-cell;
   color: #283645;
   border: 2px solid #e5e5e5;
-  background-color: #fff;
+  background-color: @white;
   background-repeat: no-repeat;
-  padding-top: 0px;
   padding-bottom: 16px;
   padding-top: 12px;
   padding-right: 0;
@@ -93,7 +92,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 0px;
     padding-bottom: 16px;
     padding-top: 12px;
     padding-right: 0;
@@ -164,6 +162,7 @@
   @media (min-width: @tablet-width) {
     font-size: 0;
   }
+
   @media (min-width: @desktop-width) {
     font-size: 0;
   }
