--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -26,7 +26,7 @@
 
   .font-mixin(30px; @header-font; 14px; normal);
   padding-top: 46px;
-  padding-left: 0px;
+  padding-left: 0;
   width: 243px;
   margin: 0 auto;
 
@@ -50,7 +50,6 @@
 }
 
 .mobile-separator--desktop {
-
   @media (min-width: @desktop-width) {
     display: inline;
   }
