--- a/less/catalog-checkbox.less
+++ b/less/catalog-checkbox.less
@@ -4,10 +4,6 @@
   padding-left: 20px;
   padding-top: 33px;
 
-  @media (min-width: @tablet-width) {
-
-  }
-
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
@@ -60,11 +56,10 @@
   transform: translate(50%, 50%);
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url('../img/icon-yes.svg');
+  background-image: url("../img/icon-yes.svg");
 }
 
 .checkbox-group {
-
   @media (min-width: @desktop-width) {
     margin-right: 56px;
   }
